--- a/build.gradle
+++ b/build.gradle
@@ -122,19 +122,19 @@ publishing {
             pom {
                 name = PROJECT
                 description = 'A swing UI builder library.'
-                url = 'https://gts-oss.github.io/'+PROJECT+'/index.html'
+                url = 'https://globaltcad.github.io/'+PROJECT+'/index.html'
                 organization {
                     name = 'com.globaltcad'
                     url = 'https://www.globaltcad.com/'
                 }
                 issueManagement {
                     system = 'Github'
-                    url = 'https://github.com/gts-oss/'+PROJECT+'/issues'
+                    url = 'https://github.com/globaltcad/'+PROJECT+'/issues'
                 }
                 licenses {
                     license {
                         name = 'MIT License'
-                        url = "https://raw.githubusercontent.com/gts-oss/"+PROJECT+"/master/LICENSE"
+                        url = "https://raw.githubusercontent.com/globaltcad/"+PROJECT+"/master/LICENSE"
                     }
                 }
                 developers {
@@ -146,8 +146,8 @@ publishing {
                 }
                 scm {
                     url = 'https://github.com/gts-oss/'+PROJECT+''
-                    connection = 'scm:git:git://github.com/gts-oss/'+PROJECT+'.git'
-                    developerConnection = 'scm:git:ssh://git@github.com:gts-oss/'+PROJECT+'.git'
+                    connection = 'scm:git:git://github.com/globaltcad/'+PROJECT+'.git'
+                    developerConnection = 'scm:git:ssh://git@github.com:globaltcad/'+PROJECT+'.git'
                 }
             }
         }
