make dependencies transitive

--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ repositories {
 dependencies {
 
     // Main dependencies:
-    implementation 'com.miglayout:miglayout:3.7.4'// https://mvnrepository.com/artifact/com.miglayout/miglayout
-    implementation 'com.alexandriasoftware.swing:jsplitbutton:1.3.1' // JSplitButton
+    api 'com.miglayout:miglayout:3.7.4'// https://mvnrepository.com/artifact/com.miglayout/miglayout
+    api 'com.alexandriasoftware.swing:jsplitbutton:1.3.1' // JSplitButton
 
     // Logging :
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
