--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'groovy'
     id 'java'
-    
+
+    // Test reporting :
+    id 'jacoco'
+
     // Public deployment :
     id 'java-library'
     id 'maven-publish'
@@ -54,6 +57,67 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+// CONFIGURING TEST REPORTING :
+
+jacoco {
+    toolVersion = "0.8.5"
+    reportsDir = file("docs/coverage")
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+    }
+}
+check.dependsOn jacocoTestReport
+
+// CUSTOM DEPLOYMENT TASKS :
+
+task cleanForDeployment(type: Delete) {
+    delete "$rootDir/build"
+    delete new File("$rootDir/docs/jdocs").listFiles()
+    delete new File("$rootDir/docs/spock/reports").listFiles()
+}
+
+task deploy() {
+
+    // Expected before : dependsOn 'cleanForDeployment'
+
+    dependsOn 'check'
+    dependsOn 'jar'
+    //dependsOn 'proguard'
+    dependsOn 'javadoc'
+    dependsOn 'releaseJDocs'
+    dependsOn 'releaseSpockReports'
+
+    // Expected after : dependsOn 'injectSpockStyles'
+}
+
+task releaseJDocs(type: Copy) {
+    from "$rootDir/build/docs/javadoc"
+    into "$rootDir/docs/jdocs"
+}
+
+task releaseSpockReports(type: Copy) {
+    from "$rootDir/build/spock-reports"
+    into "$rootDir/docs/spock/reports"
+}
+
+task injectSpockStyles(type: Task){
+    ant.replaceregexp(match:"<style>[\\s\\S]*</style>", replace:'<style>###</style>', flags:'g', byline:false) {
+        fileset(dir: "$rootDir/docs/spock/reports")
+    }
+    ant.replaceregexp(
+            match:'<style>###</style>',
+            replace:'<style>' + new File("$rootDir/docs/spock/css/custom.css").text + '</style>',
+            flags:'g',
+            byline:false
+    ) {
+        fileset(dir: "$rootDir/docs/spock/reports")
+    }
 }
 
 // JAR CREATION :
