--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ plugins {
 
 String GROUP_ID = "io.github.globaltcad"
 String PROJECT  = "swingtree"
-String VERSION  = "1.0.0"
+String VERSION  = "0.3.0"
 
 group GROUP_ID
 archivesBaseName = PROJECT
@@ -174,7 +174,12 @@ signing {
 
 nexusPublishing {
     packageGroup = GROUP_ID
-    repositories { sonatype() }
+    repositories {
+        sonatype {  //only for projects registered in Sonatype after 24 Feb 2021
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+        }
+    }
     transitionCheckOptions {
         // closing checks take some time so increase the retries
         // total time is maxRetries(180) * delayBetween(10s) = 30m
@@ -183,7 +188,24 @@ nexusPublishing {
 }
 
 publishing {
+
     repositories {
+    /*
+    // Possible alternatives:
+
+        maven {
+            name = "OSSRH"
+            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            credentials {
+                username = findProperty('sonatypeUsername') ?: findProperty('ossrhUsername') ?: System.getenv('sonatypeUsername') ?: System.getenv('ossrhUsername')
+                password = findProperty('sonatypePassword') ?: findProperty('ossrhPassword') ?: System.getenv('sonatypePassword') ?: System.getenv('ossrhPassword')
+                // Expected to be in ~/.gradle/gradle.properties
+                // Or on windows in %USERPROFILE%\.gradle\gradle.properties
+                // Example: C:\Users\JohnDoe\.gradle\gradle.properties
+            }
+        }
+
+        */
         maven {
             name = "GitHubPackages"
             url = "https://maven.pkg.github.com/globaltcad/swing-tree"
