--- a/build.gradle
+++ b/build.gradle
@@ -68,13 +68,13 @@ test {
 
 jacoco {
     toolVersion = "0.8.5"
-    reportsDir = file("docs/coverage")
+    reportsDirectory.set(file("docs/coverage"))
 }
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        csv.enabled false
+        xml.required.set(true)
+        csv.required.set(false)
     }
 }
 check.dependsOn jacocoTestReport
@@ -119,12 +119,12 @@ task releaseJDocs(type: Copy) {
 // JAR CREATION :
 
 task sourcesJar(type: Jar) {
-    classifier "sources"
+    archiveClassifier.set("sources")
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar) {
-    classifier "javadoc"
+    archiveClassifier.set("javadoc")
     from javadoc
 }
 
