--- a/build.gradle
+++ b/build.gradle
@@ -40,13 +40,10 @@ dependencies {
 
     // Testing :
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'    // mandatory dependencies for using Spock
-
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation platform('org.spockframework:spock-bom:2.1-groovy-3.0')
     testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
     testImplementation 'com.athaydes:spock-reports:2.3.2-groovy-3.0'
-
-    // if you don't already have slf4j-api and an implementation of it in the classpath, add this! (needed for reports)
     testImplementation 'org.slf4j:slf4j-api:1.7.30'
     testCompileOnly 'org.slf4j:slf4j-simple:1.7.30'
 
