--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     // Main dependencies:
     api group: 'com.miglayout',        name: 'miglayout-swing', version: '5.3' // https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
-    api group: 'io.github.globaltcad', name: 'sprouts',         version: '6f45847'
+    api group: 'io.github.globaltcad', name: 'sprouts',         version: '0.6.0'
     api group: 'com.github.weisj',     name: 'jsvg',            version: '1.2.0'
 
     // Logging :
