ensure UTF-8 support

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ version VERSION
 sourceCompatibility = 8
 targetCompatibility = 8
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
