--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,6 +8,8 @@ jobs:
         java: [1.8, 11, 17]
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Setup xvfb for screen 0
+        run: Xvfb :1 -screen 0 1600x1200x24 &
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
@@ -15,3 +17,7 @@ jobs:
       - uses: eskatos/gradle-command-action@v1
         with:
           arguments: check
+        env:
+          DISPLAY: :1
+      - name: Tear down xvfb
+        run: killall Xvfb
