--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: ${{ matrix.java }}
       - uses: eskatos/gradle-command-action@v1
         with:
-          arguments: check
+          arguments: check --scan
         env:
           DISPLAY: :1
       - name: Tear down xvfb
