introduce error-prone, null-away and JSpecify into build config

--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,14 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
-    id('io.github.gradle-nexus.publish-plugin') version '1.1.0'
-}
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 
+    // For static analysis and null checking:
+    id "net.ltgt.errorprone" version "3.1.0"
+}
+// If current version >= 11 we can do static analysis:
+boolean WE_CAN_DO_STATIC_ANALYSIS = JavaVersion.current().isJava11Compatible()
+println "Static analysis enabled: $WE_CAN_DO_STATIC_ANALYSIS"
 
 String GROUP_ID = "io.github.globaltcad"
 String PROJECT  = "swing-tree"
@@ -32,6 +37,16 @@ repositories {
 }
 
 dependencies {
+
+    if ( WE_CAN_DO_STATIC_ANALYSIS ) {
+        errorprone "com.uber.nullaway:nullaway:0.10.22"
+        compileOnly "com.google.code.findbugs:jsr305:3.0.2"
+        errorprone "com.google.errorprone:error_prone_core:2.24.1"
+    }
+    else
+        errorprone "com.google.errorprone:error_prone_core:2.9.+"
+
+    implementation group: 'org.jspecify', name: 'jspecify', version: '0.3.0'
 
     // Main dependencies:
     api group: 'com.miglayout',        name: 'miglayout-swing', version: '5.3' // https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
@@ -58,6 +73,23 @@ dependencies {
     testImplementation 'com.formdev:flatlaf-intellij-themes:3.4'
     testImplementation 'com.formdev:flatlaf:3.4' // Looks better than regular swing :)
 
+}
+
+if ( WE_CAN_DO_STATIC_ANALYSIS ) {
+    tasks.withType(JavaCompile) {
+        // remove the if condition if you want to run NullAway on test code
+        if (!name.toLowerCase().contains("test")) {
+            options.errorprone {
+                check("NullAway", net.ltgt.gradle.errorprone.CheckSeverity.ERROR)
+                option("NullAway:AnnotatedPackages", "")
+            }
+        } else {
+            options.errorprone {
+                check("NullAway", net.ltgt.gradle.errorprone.CheckSeverity.WARN)
+                option("NullAway:AnnotatedPackages", "")
+            }
+        }
+    }
 }
 
 test {
