try fix killall not working on windows

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,5 +19,9 @@ jobs:
           arguments: check
         env:
           DISPLAY: :1
-      - name: Tear down xvfb
+      - name: Tear down xvfb on Linux and macOS
         run: killall Xvfb
+        if: runner.os != 'Windows'
+      - name: Tear down xvfb on Windows
+        run: taskkill /F /IM Xvfb.exe
+        if: runner.os == 'Windows'
