--- a/build.gradle
+++ b/build.gradle
@@ -70,9 +70,12 @@ dependencies {
     testRuntimeOnly group: 'net.bytebuddy', name: 'byte-buddy', version: '1.11.15' // allows mocking of classes (in addition to interfaces)
     testRuntimeOnly group: 'org.objenesis', name: 'objenesis',  version: '3.2'     // allows mocking of classes without default constructor (together with ByteBuddy or CGLIB)
 
-
     testImplementation 'com.formdev:flatlaf-intellij-themes:3.4'
     testImplementation 'com.formdev:flatlaf:3.4' // Looks better than regular swing :)
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    testCompileOnly 'org.projectlombok:lombok:1.18.34'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
 
 }
 
