--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
     // Main dependencies:
     api group: 'com.miglayout',        name: 'miglayout-swing', version: '5.3' // https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
-    api group: 'io.github.globaltcad', name: 'sprouts',         version: '818380ffecb29841a0767bb2aef35c2499452355'
+    api group: 'io.github.globaltcad', name: 'sprouts',         version: '2.0.0-M14'
     api group: 'com.github.weisj',     name: 'jsvg',            version: '1.6.1'
 
     // Logging :
