--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
     // Main dependencies:
     api group: 'com.miglayout',        name: 'miglayout-swing', version: '5.3' // https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
-    api group: 'io.github.globaltcad', name: 'sprouts',         version: '06ff8713433e11fa02f904227189f6979c3b8446'
+    api group: 'io.github.globaltcad', name: 'sprouts',         version: '2.0.0-M16'
     api group: 'com.github.weisj',     name: 'jsvg',            version: '1.7.0'
 
     // Logging :
