--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 
     api("com.miglayout:miglayout-swing") {// https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
         version {
-            require("[5.3, 12.0.0)") // Allows 2.0.0 and above, up to 11.
+            require("[5.3, 12.0.0)")
             prefer("5.3") // Default if user doesn't specify
         }
     }
@@ -66,9 +66,10 @@ dependencies {
     api("io.github.globaltcad:sprouts") {
         version {
             require("[2.0.0, 3.0.0)") // Allows 2.0.0 and above, but not 3.0.0+
-            prefer("2.1.0") // Default if user doesn't specify
+            prefer("2.1.1") // Default if user doesn't specify
         }
     }
+
 
     // Logging :
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '[1+, )'
